--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-   "name": "",
+   "name": "gsap-scrolltrigger-plugin",
    "version": "0.0.0",
    "description": "",
    "private": true,
@@ -21,5 +21,7 @@
       "parcel-bundler": "^1.12.4",
       "sass": "^1.26.5"
    },
-   "dependencies": {}
+   "dependencies": {
+      "gsap": "^3.3.1"
+   }
 }
